--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,9 +11,6 @@ AllCops:
     - features/**/*
     - spec/**/*
 
-LineLength:
-  Enabled: false
-
 Style/Documentation:
   Enabled: false
 
@@ -21,4 +18,7 @@ Style/FrozenStringLiteralComment:
   Enabled: false
 
 Style/StringLiterals:
+  Enabled: false
+
+Style/LineLength:
   Enabled: false
